@@ -1197,6 +1197,9 @@ ECLS 0.9
   - The compiler might get into an infinite loop when dealing with
     compiler-macros.
 
+  - When the functions/macros in a DLL are no longer used, and the
+    garbage collector notices this, the library is properly deallocated.
+
 * Errors of the interpreter:
 
   - CASE should use EQL to compare objects, not EQ.
